removed polish strings

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,8 +2,7 @@
     (click)="addNewTodo()"
     mat-flat-button
     color="primary"
->Dodaj nową listę</button>
-
+>Add new todo list</button>
 <div class="cards">
     <agh-app-todo
         *ngFor="let todo of todos"
