--- a/src/app/components/sidebar/sidebar.component.html
+++ b/src/app/components/sidebar/sidebar.component.html
@@ -1,5 +1,3 @@
-<mat-sidenav-container>
-  <mat-sidenav *ngFor="let category of categories">
-
-  </mat-sidenav>
-</mat-sidenav-container>
+<ul>
+  <li *ngFor="let category of categories">{{category.title}}</li>
+</ul>
