implemented filters by category

--- a/src/app/components/sidebar/sidebar.component.html
+++ b/src/app/components/sidebar/sidebar.component.html
@@ -1,3 +1,6 @@
-<ul>
-  <li *ngFor="let category of categories">{{category.title}}</li>
-</ul>
+<mat-radio-group [(ngModel)]="selectedCategory" (change)="selectCategory()">
+  <mat-radio-button [value]="{id: 'all'}">
+    all
+  </mat-radio-button>
+  <mat-radio-button *ngFor="let category of categories" [value]="category">{{category.title}}</mat-radio-button>
+</mat-radio-group>
