--- a/src/styles.scss
+++ b/src/styles.scss
@@ -5,4 +5,5 @@ body {
     margin: 0;
     font-family: Roboto, "Helvetica Neue", sans-serif;
     background: linear-gradient(#2193b0, #6dd5ed);
+    background-attachment: fixed;
 }
